# xendex_ai_sales_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/: .env.example  cleanup.py  debug_output.txt  direct_fix_db.py  fix_db.py  init_db.py  pyproject.toml  requirements.txt  test_run.py
backend/alembic/: env.py
backend/alembic/versions/: 05b279f3899e_initial_schema.py  add_followup_fields.py
backend/app/: __init__.py  config.py  dependencies.py  logging.py  main.py
backend/app/agents/: __init__.py  base.py  google_research.py  intent_scorer.py  lead_intelligence.py  linkedin_agent.py  risk_filter.py  website_analyzer.py
backend/app/engine/: __init__.py  draft_generator.py  normalizer.py  personalization.py  scoring_engine.py  strategy.py
backend/app/integrations/: linkedin_scraper.py  openai_client.py  scraper.py  sendgrid.py
backend/app/models/: __init__.py  base.py  compliance.py  draft.py  event.py  in_sequence.py  lead.py  template.py
backend/scripts/: check_counts.py  check_db_conn.py  check_extend.py  check_extend_simple.py  check_leads_simple.py  check_nithyo_persona.py  check_not_started.py  check_schema.py  check_stuck.py  debug_leads.py  debug_scores.py  debug_zero_scores.py  deep_debug_nithyo.py  dump_intel.py  find_lead.py  find_new.py  fix_statuses.py  fix_zero_scores.py  force_nithyo_qualified.py  force_reset_researching.py  force_sync_statuses.py  purge_not_started.py  rerun_zero_scores.py  rerun_zero_scores_single.py  rerun_zero_scores_sync.py  reset_stuck_leads.py  test_linkedin_agent.py  test_linkedin_agent_fixed.py  test_linkedin_cookie.py  test_scraper_redirect.py  test_trigger.py
(+46 files in other folders)
